MDEV-8369 Unexpected impossible WHERE for a condition on a ZEROFILL field Disable IDENTITY_SUBST propagation for ZEROFILL columns, as discussed with Sergei.